@@ -7521,13 +7521,22 @@ no?), but it is more likely to be a mistake.
 @findex file
 @cindex writing to a file
 @cindex file, writing to
+@cindex reading from a file
+@cindex file, reading from
 
-The @code{file} function allows the makefile to write to a file.  Two
-modes of writing are supported: overwrite, where the text is written
-to the beginning of the file and any existing content is lost, and
-append, where the text is written to the end of the file, preserving
-the existing content.  In all cases the file is created if it does not
-exist.
+The @code{file} function allows the makefile to write to or read from
+a file.  Two modes of writing are supported: overwrite, where the text
+is written to the beginning of the file and any existing content is
+lost, and append, where the text is written to the end of the file,
+preserving the existing content.  In both cases the file is created if
+it does not exist.  It is a fatal error if the file cannot be opened
+for writing, or if the write operation fails.  The @code{file}
+function expands to the empty string when writing to a file.
+
+When reading from a file, the @code{file} function expands to the
+verbatim contents of the file, except that the final newline (if there
+is one) will be stripped.  Attempting to read from a non-existent file
+expands to the empty string.
 
 The syntax of the @code{file} function is:
 
@@ -7535,21 +7544,23 @@ The syntax of the @code{file} function is:
 $(file @var{op} @var{filename}[,@var{text}])
 @end example
 
-The operator @var{op} can be either @code{>} which indicates overwrite
-mode, or @code{>>} which indicates append mode.  The @var{filename}
-indicates the file to be written to.  There may optionally be
+When the @code{file} function is evaluated all its arguments are
+expanded first, then the file indicated by @var{filename} will be
+opened in the mode described by @var{op}.
+
+The operator @var{op} can be @code{>} to indicate the file will be
+overwritten with new content, @code{>>} to indicate the current
+contents of the file will be appended to, or @code{<} to indicate the
+contents of the file will be read in.  The @var{filename} specifies
+the file to be written to or read from.  There may optionally be
 whitespace between the operator and the file name.
 
-When the @code{file} function is expanded all its arguments are
-expanded first, then the file indicated by @var{filename} will be
-opened in the mode described by @var{op}.  Finally @var{text} will be
-written to the file.  If @var{text} does not already end in a newline,
-even if empty, a final newline will be written.  If the @var{text}
-argument is not given, nothing will be written.  The result of
-evaluating the @code{file} function is always the empty string.
+When reading files, it is an error to provide a @var{text} value.
 
-It is a fatal error if the file cannot be opened for writing, or if
-the write operation fails.
+When writing files, @var{text} will be written to the file.  If
+@var{text} does not already end in a newline a final newline will be
+written (even if @var{text} is the empty string).  If the @var{text}
+argument is not given at all, nothing will be written.
 
 For example, the @code{file} function can be useful if your build
 system has a limited command line size and your recipe runs a command
